--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -10,7 +10,7 @@
         </style>
         <meta charset="UTF-8" />
         <title>PrivacyPolicy</title>
-         <link rel="stylesheet" href="/CSS/style-sheet-1.css">
+         <link rel="stylesheet" href="CSS/style-sheet-1.css">
     </head>
     
     <body>
