--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <link rel="stylesheet" href="CSS/style-sheet-1.css">
     </head>
     <body>
-        <img src="Images/MerillGamesLogoWithoutBackgound.png" alt="MerillGamesLogo"  class="center single-image" style="width:1600px;height:900px;" >
-        <img src="Images/SplashScreenV5.png" alt="StarCatchImage" class="center single-image rounded-image game_img" style="width:480px;height:270px;" >
+        <img src="Images/MerillGamesLogoWithoutBackgound.png" alt="MerillGamesLogo"  class="center single-merill-image">
+        <img src="Images/SplashScreenV5SMALLER.png" alt="StarCatchImage" class="center single-starcatch-image rounded-image game_img">
         <div class="headings-container">
             <h3 class="heading-left"><a href ="PrivacyPolicy.html" style= text-color: none;>Privacy Policy</a></h3>
             <h3 class="heading-right">merillgamestudios@gmail.com</h3>
