--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="Images/MerillGamesLogoWithoutBackgound.png" alt="MerillGamesLogo"  class="center single-merill-image">
         <img src="Images/SplashScreenV5SMALLER.png" alt="StarCatchImage" class="center single-starcatch-image rounded-image game_img">
         <div class="headings-container">
-            <h3 class="heading-left"><a href ="PrivacyPolicy.html" style= text-color: none;>Privacy Policy</a></h3>
+            <h3 class="heading-left"><a href ="PrivacyPolicy.html">Privacy Policy</a></h3>
             <h3 class="heading-right">merillgamestudios@gmail.com</h3>
         </div>
     </body>
