--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -8,6 +8,8 @@
              li {text-align: left; margin-bottom: 20px}
              h2 {text-align: left}
         </style>
+        <meta name="description" content="PrivacyPolicy">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8" />
         <title>PrivacyPolicy</title>
          <link rel="stylesheet" href="CSS/style-sheet-1.css">
