--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="MerillGames">
         <style>
             h1 {text-align: center;}
             p {text-align: center;}
@@ -14,7 +15,7 @@
     </head>
     <body>
         <img src="Images/MerillGamesLogoWithoutBackgound.png" alt="MerillGamesLogo"  class="center single-merill-image">
-        <img src="Images/SplashScreenV5.png" alt="StarCatchImage" class="center single-starcatch-image rounded-image game_img">
+        <img src="Images/SplashScreenV5.png" alt="Starcatch" class="center single-starcatch-image rounded-image game_img">
         <div class="headings-container">
             <h3 ><a href ="PrivacyPolicy.html">Privacy Policy</a></h3>
             <h3>merillgamestudios@gmail.com</h3>
