--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <title>MerillGames</title>
         <script src="script.js"></script>
         <link rel="stylesheet" href="CSS/style-sheet-1.css">
+        <link rel="icon" href="Images/MerillSimplfied.png" type="image/x-icon">
     </head>
     <body>
         <img src="Images/MerillGamesLogoWithoutBackgound.png" alt="MerillGamesLogo"  class="center single-merill-image">
