--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="nav-links">
                 <h3> News </h3>
                 <h3 ><a href ="PrivacyPolicy.html">Policy</a></h3>
-                <h3> Contact Us </h3>
+                <h3> Contact</h3>
             </div>
 
            
@@ -39,9 +39,6 @@
         <div class="game-container">
             <img src="Images/SplashScreenV5.png" alt="Starcatch" class="center rounded-image game_img">
 
-        </div>
-        <div class="bottom-container">
-            <h2>merillgamestudios@gmail.com</h2>
         </div>
     </body>
 </html>
