--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             
             <div class="nav-links">
                 <h3> News </h3>
-                <h3 ><a href ="PrivacyPolicy.html">Policy</a></h3>
-                <h3> Contact</h3>
+                <h3 ><a class = "index-atext" href ="PrivacyPolicy.html">Policy</a></h3>
+                <h3> Contact </h3>
             </div>
 
            
